Update CandidateSearchBaseSimulation.java