@@ -28,14 +28,15 @@ import org.talentcatalog.perf.payloads.CandidateSearchPayloads;
 /**
  * Base class for Candidate Search Gatling simulations.
  *
- * <p>This base class centralizes shared setup so individual simulations can focus on
- * scenarios and injection profiles.</p>
+ * <p>This base class centralizes shared setup so individual simulations can focus on scenarios and
+ * injection profiles.</p>
  *
  * <h2>Shared responsibilities</h2>
  * <ul>
  *   <li>Resolve the candidate search payload mode from {@code -Dpayload=...}</li>
  *   <li>Load performance settings via {@link PerfConfig#settings()}</li>
  *   <li>Build a shared {@link HttpProtocolBuilder} via {@link HttpProtocolFactory}</li>
+ *   <li>Provide standard/global assertions (correctness + optional latency)</li>
  * </ul>
  *
  * <h2>Payload selection</h2>
@@ -51,6 +52,7 @@ public abstract class CandidateSearchBaseSimulation extends Simulation {
 
   /**
    * System property key used to choose the candidate-search payload mode.
+   *
    * <p>Allowed values: {@code baseline}, {@code heavy}. Default: {@code heavy}.</p>
    */
   protected static final String PROP_PAYLOAD = "payload";
@@ -66,18 +68,34 @@ public abstract class CandidateSearchBaseSimulation extends Simulation {
   protected final HttpProtocolBuilder httpProtocol;
 
   /**
-   * Maximum allowed global p95 response time (ms).
+   * System property key for the maximum allowed global p95 response time in milliseconds.
    *
-   * <p>Controlled via {@code -Dperf.maxP95Ms}.
+   * <p>Set to {@code 0} to disable the p95 assertion (useful for nightlies where you want the run
+   * to complete and enforce latency budgets later via aggregated checks).</p>
    *
-   * <ul>
-   *   <li>Default: {@code 2000} (strict)</li>
-   *   <li>Set to {@code 0} to disable latency assertions (useful for CI nightlies)</li>
-   * </ul>
+   * <p>Example: {@code -Dperf.maxP95Ms=15000} or {@code -Dperf.maxP95Ms=0}</p>
    */
-  protected static final int MAX_P95_MS =
-      (int) getDoubleProp("perf.maxP95Ms", 2000);
+  protected static final String PROP_MAX_P95_MS = "perf.maxP95Ms";
 
+  /**
+   * Default p95 threshold (ms) when {@link #PROP_MAX_P95_MS} is not provided.
+   */
+  protected static final int DEFAULT_MAX_P95_MS = 2000;
+
+  /**
+   * System property key for the maximum allowed global failed request percentage.
+   *
+   * <p>This is the correctness gate. If the percentage of failed requests (KO) exceeds this value,
+   * the simulation fails.</p>
+   *
+   * <p>Example: {@code -Dperf.maxFailedPct=1.0}</p>
+   */
+  protected static final String PROP_MAX_FAILED_PCT = "perf.maxFailedPct";
+
+  /**
+   * Default maximum failed request percentage when {@link #PROP_MAX_FAILED_PCT} is not provided.
+   */
+  protected static final double DEFAULT_MAX_FAILED_PCT = 1.0;
 
   /**
    * Initializes shared simulation configuration:
@@ -111,48 +129,72 @@ public abstract class CandidateSearchBaseSimulation extends Simulation {
   }
 
   /**
-   * Reads a numeric system property safely.
+   * Reads an integer system property safely.
    *
-   * @param key property name
-   * @param def fallback value
-   * @return parsed value or fallback
+   * @param key        property name
+   * @param defaultVal fallback value
+   * @return parsed integer or fallback
    */
-  protected static double getDoubleProp(String key, double def) {
+  protected static int getIntProp(String key, int defaultVal) {
     String v = System.getProperty(key);
-    if (v == null || v.isBlank()) return def;
+    if (v == null || v.trim().isEmpty()) {
+      return defaultVal;
+    }
+    try {
+      return Integer.parseInt(v.trim());
+    } catch (Exception e) {
+      return defaultVal;
+    }
+  }
+
+  /**
+   * Reads a double system property safely.
+   *
+   * @param key        property name
+   * @param defaultVal fallback value
+   * @return parsed double or fallback
+   */
+  protected static double getDoubleProp(String key, double defaultVal) {
+    String v = System.getProperty(key);
+    if (v == null || v.trim().isEmpty()) {
+      return defaultVal;
+    }
     try {
       return Double.parseDouble(v.trim());
     } catch (Exception e) {
-      return def;
+      return defaultVal;
     }
   }
 
   /**
    * Builds the default global assertion set for candidate-search simulations.
    *
-   * <p>Always enforces correctness (failed request percentage).
+   * <h2>Correctness</h2>
+   * <p>Always enforced via {@code global().failedRequests().percent().lt(maxFailedPct)} where
+   * {@code maxFailedPct} is controlled by {@code -Dperf.maxFailedPct} (default {@code 1.0}).</p>
    *
-   * <p>Latency (p95) enforcement is optional and can be disabled by setting:
+   * <h2>Latency</h2>
+   * <p>Optionally enforced via p95:
+   * {@code global().responseTime().percentile3().lt(maxP95Ms)} where {@code maxP95Ms} is controlled
+   * by {@code -Dperf.maxP95Ms} (default {@code 2000}). Set {@code -Dperf.maxP95Ms=0} to
+   * disable.</p>
    *
-   * <pre>
-   *   -Dperf.maxP95Ms=0
-   * </pre>
-   *
-   * @return an array of Gatling assertions to apply in {@code setUp(...)}
+   * @return an array of Gatling assertions to apply in {@code setUp(...).assertions(...)}
    */
   protected static Assertion[] defaultAssertions() {
     var assertions = new ArrayList<Assertion>();
 
-    // Always require near-zero failures
-    assertions.add(global().failedRequests().percent().lt(1.0));
+    double maxFailedPct = getDoubleProp(PROP_MAX_FAILED_PCT, DEFAULT_MAX_FAILED_PCT);
+    int maxP95Ms = getIntProp(PROP_MAX_P95_MS, DEFAULT_MAX_P95_MS);
 
-    // Only enforce latency if enabled
-    if (MAX_P95_MS > 0) {
-      assertions.add(global().responseTime().percentile3().lt(MAX_P95_MS));
+    // Correctness gate (always on)
+    assertions.add(global().failedRequests().percent().lt(maxFailedPct));
+
+    // Optional latency gate
+    if (maxP95Ms > 0) {
+      assertions.add(global().responseTime().percentile3().lt(maxP95Ms));
     }
 
     return assertions.toArray(new Assertion[0]);
   }
-
-
 }
